testsuite/poke.pkl/sizeof-type-diag.pk
/* { dg-do compile } */

defun foo = offset<uint<64>,b>:
  {
   deftype t = int[];

   return sizeof (t); /* { dg-error "" } */
  }
